<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alert.mobile.alertdoctor.ScrollingActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/sign_out_menu"
        android:orderInCategory="100"
        android:title="@string/sign_out_menu" />
    <item
        android:id="@+id/fresh_config_menu"
        android:orderInCategory="100"
        android:title="@string/fresh_config_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/invite_menu"
        android:orderInCategory="100"
        android:title="@string/invite_menu_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/crash_menu"
        android:orderInCategory="100"
        android:title="@string/crash_menu"
        app:showAsAction="never" />

</menu>
